--- a/package.json
+++ b/package.json
@@ -73,10 +73,13 @@
     ]
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.9.11",
     "prop-types": "^15.6.1",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
+    "react-hook-form": "^7.43.2",
     "react-polyfills": "0.0.1",
-    "react-router-dom": "^6.8.1"
+    "react-router-dom": "^6.8.1",
+    "yup": "^1.0.0"
   }
 }
